Lots of bug fixes, feature additions, etc... -Fixed issues with Wallbase provider not returning results anymore (rewalls brings back more items if you don't use a query string, it used to be you couldn't provide an empty search string, now you can) - Wallbase also now supports paging, so it will bring back more then just the first page worth of results.  It also has some performance improvement code which runs some operations in parallel.
-Added feature so that providers can now have their own settings windows (see the code for Google Imags provider, more to come)
  -> as part of that I tweaked the layout of the options page

-Search settings now have their own class which is passed around.  This will make things cleaner in the future if we add more search options.
-Broke up some of the strong coupling that was in place between Provider and Picture managers
-Added better naming system for providers so that it uses attributes on the provider class now.
-Tweaked XMLSerializer to be more flexible
-Search results are now cached which should improve performance when coming from a cold start (especially for wallbase since it's still kind of slow)

-Note that your old settings files probably won't work, so just start with a clean one.

--- a/Pulse/Pulse/Options.xaml
+++ b/Pulse/Pulse/Options.xaml
@@ -27,19 +27,24 @@
                     <StackPanel Orientation="Vertical" Margin="10">
                         <TextBlock FontSize="24" FontWeight="Light" Text="{x:Static Properties:Resources.OptionsSearch}" Foreground="#083ca2"/>
                         <Separator Margin="0,0,0,10"/>
-                        <TextBox Name="SearchBox" Text="{x:Static Properties:Resources.OptionsSearchBox}" FontStyle="Italic" Foreground="Gray"
-                                     IsKeyboardFocusedChanged="SearchBoxIsKeyboardFocusedChanged" TextChanged="SearchBoxTextChanged"/>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBox Name="SearchBox" FontStyle="Italic" Foreground="Gray"
+                                     IsKeyboardFocusedChanged="SearchBoxIsKeyboardFocusedChanged" TextChanged="SearchBoxTextChanged" Width="183" />
+                            <ComboBox Name="ProvidersBox" MinWidth="120" Margin="7,3,0,3" SelectionChanged="ProviderSelectionChanged" Width="156" />
+                            <Button Content="{x:Static Properties:Resources.ProviderSettings}" Height="23" Name="ProviderSettings" Width="75" IsEnabled="False" Margin="7,0,0,0" Click="ProviderSettings_Click" />
+                        </StackPanel>
+
                         <StackPanel Name="FilterPanel">
                             <TextBlock FontSize="24" FontWeight="Light" Text="{x:Static Properties:Resources.OptionsFilter}" Margin="0,15,0,0" Foreground="#083ca2"/>
                             <Separator Margin="0,0,0,10" Visibility="Visible"/>
                             <TextBlock Text="{x:Static Properties:Resources.OptionsFilterText}" TextWrapping="Wrap"/>
                             <TextBox Name="FilterBox" Text="{x:Static Properties:Resources.OptionsSearchBox}" 
                                      IsKeyboardFocusedChanged="SearchBoxIsKeyboardFocusedChanged" TextChanged="SearchBoxTextChanged"/>
+
                         </StackPanel>
                         <TextBlock FontSize="24" FontWeight="Light" Text="{x:Static Properties:Resources.OptionsBehaviour}" Margin="0,15,0,0" Foreground="#083ca2"/>
                         <Separator Margin="0,0,0,10"/>
-                        <TextBlock Text="{x:Static Properties:Resources.OptionsSelectProvider}"/>
-                        <ComboBox Name="ProvidersBox" MinWidth="120" Margin="0,3,0,3" SelectionChanged="ComboBoxSelectionChanged"/>
+
                         <CheckBox Name="AutoDownloadCheckBox" Content="{x:Static Properties:Resources.OptionsDownloadAutomatically}" Click="CheckBoxClick"/>
                         <StackPanel Orientation="Horizontal" Margin="0,7,0,0" >
                             <TextBlock Text="{x:Static Properties:Resources.OptionsRefreshInterval}"/>
@@ -51,7 +56,7 @@
                             <Slider Name="RefreshIntervalSlider" Margin="0,3,0,0" Value="20" TickPlacement="Both" Minimum="0" Maximum="90" TickFrequency="5" SmallChange="10" LargeChange="10"
                                         IsSnapToTickEnabled="True" IsDirectionReversed="True" ValueChanged="RefreshIntervalSliderValueChanged" IsEnabled="{Binding ElementName=AutoDownloadCheckBox, Path=IsChecked}"/>
                         </DockPanel>
-                        <CheckBox Name="SkipLowResCheckBox" Content="{x:Static Properties:Resources.OptionsSkipLowRes}" Click="CheckBoxClick"/>
+                        <CheckBox Name="PreFetchCheckBox" Content="{x:Static Properties:Resources.OptionsPreFetch}" Click="CheckBoxClick"/>
                         <CheckBox Name="GetMaxResCheckBox" Content="{x:Static Properties:Resources.OptionsGetMaxRes}" Click="CheckBoxClick"/>
                         <CheckBox Name="ChangeLogonBgCheckBox" Content="{x:Static Properties:Resources.OptionsChangeLogonBg}" Click="CheckBoxClick"/>
                         <TextBlock FontSize="24" FontWeight="Light" Text="{x:Static Properties:Resources.OptionsCache}" Margin="0,15,0,0" Foreground="#083ca2"/>
