--- a/Pulse/Providers/wallbase/WallbaseProviderPreferences.xaml
+++ b/Pulse/Providers/wallbase/WallbaseProviderPreferences.xaml
@@ -5,34 +5,69 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Pulse.Base;assembly=Pulse.Base"
              mc:Ignorable="d" 
-             d:DesignHeight="229" d:DesignWidth="351" Loaded="ProviderConfigurationBase_Loaded">
-    <Grid Width="349">
-        <Label Content="Image Area:" Height="28" HorizontalAlignment="Left" Margin="10,10,0,0" Name="label1" VerticalAlignment="Top" />
-        <Label Content="Image Size: " Height="28" HorizontalAlignment="Left" Margin="12,38,0,0" Name="label2" VerticalAlignment="Top" />
-        <Label Content="Order By: " Height="28" HorizontalAlignment="Left" Margin="12,72,0,0" Name="label3" VerticalAlignment="Top" />
-        <ComboBox Height="23" HorizontalAlignment="Left" Margin="89,77,0,0" Name="cbOrderBy" 
-                  VerticalAlignment="Top" Width="120"
+             d:DesignHeight="336" d:DesignWidth="356" Loaded="ProviderConfigurationBase_Loaded">
+    <Grid Width="351" Height="327">
+        <Label Content="Image Area:" Height="28" HorizontalAlignment="Left" Margin="6,54,0,0" Name="label1" VerticalAlignment="Top" />
+        <ComboBox Height="23" HorizontalAlignment="Left" Margin="85,59,0,0" Name="cbArea" VerticalAlignment="Top" Width="120"
                   DisplayMemberPath="Name"
                   SelectedValuePath="Value"/>
-        <ComboBox Height="23" HorizontalAlignment="Left" Margin="89,12,0,0" Name="cbArea" VerticalAlignment="Top" Width="120"
-                  DisplayMemberPath="Name"
-                  SelectedValuePath="Value"/>
-        <ComboBox Height="23" HorizontalAlignment="Left" Margin="89,43,0,0" Name="cbImageSizeType" VerticalAlignment="Top" Width="79"
-                  DisplayMemberPath="Name"
-                  SelectedValuePath="Value"/>
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="174,43,0,0" Name="txtWidth" VerticalAlignment="Top" Width="51" />
-        <Label Content="x" Height="28" HorizontalAlignment="Left" Margin="231,41,0,0" Name="label4" VerticalAlignment="Top" />
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="249,43,0,0" Name="txtHeight" VerticalAlignment="Top" Width="51" />
-        <ComboBox Height="23" HorizontalAlignment="Left" Margin="217,77,0,0" Name="cbOrderByDirection" VerticalAlignment="Top" Width="120"
-                  DisplayMemberPath="Name"
-                  SelectedValuePath="Value"/>
-        <Label Content="Color Search: " Height="28" HorizontalAlignment="Left" Margin="12,120,0,0" Name="label5" VerticalAlignment="Top" />
-        <Label Content="R" Height="28" HorizontalAlignment="Left" Margin="88,120,0,0" Name="label6" VerticalAlignment="Top" />
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="105,122,0,0" Name="txtColorRed" VerticalAlignment="Top" Width="45" />
-        <Label Content="G" Height="28" HorizontalAlignment="Left" Margin="86,152,0,0" Name="label7" VerticalAlignment="Top" />
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="105,152,0,0" Name="txtColorGreen" VerticalAlignment="Top" Width="45" />
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="105,181,0,0" Name="txtColorBlue" VerticalAlignment="Top" Width="45" />
-        <Label Content="B" Height="28" HorizontalAlignment="Left" Margin="87,179,0,0" Name="label8" VerticalAlignment="Top" />
-        <TextBlock Height="91" HorizontalAlignment="Left" Margin="174,120,0,0" Name="textBlock1" Text="Color Search only works in &quot;Search&quot; mode.  The Red, Green and Blue components of the color must be entered seperately." VerticalAlignment="Top" Width="153" TextWrapping="Wrap" />
+        <Label Content="Login: " Height="28" HorizontalAlignment="Left" Margin="14,21,0,0" Name="label9" VerticalAlignment="Top" />
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="56,23,0,0" Name="txtUserID" VerticalAlignment="Top" Width="120" IsEnabled="True" />
+        <PasswordBox Height="23" HorizontalAlignment="Left" Margin="223,23,0,0" Name="txtPassword" VerticalAlignment="Top" Width="120" IsEnabled="True" />
+        <Label Content="Pass: " Height="28" HorizontalAlignment="Left" Margin="182,21,0,0" Name="label10" VerticalAlignment="Top" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="12,5,0,0" Name="textBlock2" Text="Authentication is optional but enables some features." VerticalAlignment="Top" Width="327" TextWrapping="Wrap" />
+        <GroupBox Header="Categories" Height="52" HorizontalAlignment="Left" Margin="6,88,0,0" Name="groupBox1" VerticalAlignment="Top" Width="131">
+            <Grid>
+                <CheckBox Content="WG" Height="16" HorizontalAlignment="Left" Margin="6,6,0,0" Name="cbWG" VerticalAlignment="Top" IsChecked="True" ToolTip="Wallpapers / General" />
+                <CheckBox Content="W" Height="16" HorizontalAlignment="Left" Margin="44,6,0,0" Name="cbW" VerticalAlignment="Top" ToolTip="Anime / Manga" />
+                <CheckBox Content="HR" Height="16" HorizontalAlignment="Left" Margin="79,6,0,0" Name="cbHR" VerticalAlignment="Top" ToolTip="High Resolution Images" />
+            </Grid>
+        </GroupBox>
+        <GroupBox Header="Purity" Height="52" HorizontalAlignment="Left" Margin="139,88,0,0" Name="groupBox2" VerticalAlignment="Top" Width="200">
+            <Grid Height="31">
+                <CheckBox Content="SFW" Height="16" HorizontalAlignment="Left" Margin="6,5,0,0" Name="cbSFW" VerticalAlignment="Top" IsChecked="True" ToolTip="Clean Wallpapers" />
+                <CheckBox Content="SKETCHY" Height="16" HorizontalAlignment="Left" Margin="52,5,0,0" Name="cbSketchy" VerticalAlignment="Top" ToolTip="Wallpapers with soft/erotic poses, blood, etc..." />
+                <CheckBox Content="NSFW" Height="16" HorizontalAlignment="Left" Margin="123,6,0,0" Name="cbNSFW" VerticalAlignment="Top" ToolTip="(LOGIN REQUIRED!) Wallpaper with visible boobs, testicles/vagina, gore etc." IsEnabled="True" />
+            </Grid>
+        </GroupBox>
+        <GroupBox Header="Resolution" Height="53" HorizontalAlignment="Left" Margin="6,141,0,0" Name="groupBox3" VerticalAlignment="Top" Width="331">
+            <Grid>
+                <Label Content="Image Size: " Height="28" HorizontalAlignment="Left" Margin="4,0,0,0" Name="label2" VerticalAlignment="Top" />
+                <ComboBox Height="23" HorizontalAlignment="Left" Margin="79,2,0,0" Name="cbImageSizeType" VerticalAlignment="Top" Width="79" DisplayMemberPath="Name" SelectedValuePath="Value" />
+                <TextBox Height="23" HorizontalAlignment="Left" Margin="164,2,0,0" Name="txtWidth" VerticalAlignment="Top" Width="51" />
+                <Label Content="x" Height="28" HorizontalAlignment="Left" Margin="221,0,0,0" Name="label4" VerticalAlignment="Top" />
+                <TextBox Height="23" HorizontalAlignment="Left" Margin="239,2,0,0" Name="txtHeight" VerticalAlignment="Top" Width="51" />
+            </Grid>
+        </GroupBox>
+        <TabControl Height="113" HorizontalAlignment="Left" Margin="8,198,0,0" Name="tabControl1" VerticalAlignment="Top" Width="329">
+            <TabItem Header="Search" Name="tabItem1">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="73*" />
+                        <ColumnDefinition Width="117*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Content="Order By: " Height="28" HorizontalAlignment="Left" Margin="3,5,0,0" Name="label3" VerticalAlignment="Top" />
+                    <ComboBox Height="23" HorizontalAlignment="Left" Margin="62,5,0,0" Name="cbOrderBy" VerticalAlignment="Top" Width="120" DisplayMemberPath="Name" SelectedValuePath="Value" Grid.ColumnSpan="2" />
+                    <ComboBox Height="23" HorizontalAlignment="Left" Margin="67,5,0,0" Name="cbOrderByDirection" VerticalAlignment="Top" Width="120" DisplayMemberPath="Name" SelectedValuePath="Value" Grid.Column="1" />
+                    <Label Content="Color Search: " Height="28" HorizontalAlignment="Left" Margin="3,30,0,0" Name="label5" VerticalAlignment="Top" />
+                    <Label Content="R" Height="25" HorizontalAlignment="Left" Margin="80,30,0,0" Name="label6" VerticalAlignment="Top" />
+                    <TextBox Height="23" HorizontalAlignment="Left" Margin="97,32,0,0" Name="txtColorRed" VerticalAlignment="Top" Width="45" Grid.ColumnSpan="2" />
+                    <Label Content="G" Height="28" HorizontalAlignment="Left" Margin="21,30,0,0" Name="label7" VerticalAlignment="Top" Grid.Column="1" />
+                    <TextBox Height="23" HorizontalAlignment="Left" Margin="40,32,0,0" Name="txtColorGreen" VerticalAlignment="Top" Width="45" Grid.Column="1" />
+                    <TextBox Height="23" HorizontalAlignment="Left" Margin="105,32,0,0" Name="txtColorBlue" VerticalAlignment="Top" Width="45" Grid.Column="1" />
+                    <Label Content="B" Height="28" HorizontalAlignment="Left" Margin="87,30,0,0" Name="label8" VerticalAlignment="Top" Grid.Column="1" />
+                </Grid>
+            </TabItem>
+            <TabItem Header="Collections">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="73*" />
+                        <ColumnDefinition Width="117*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Content="Collection ID:" Height="28" HorizontalAlignment="Left" Margin="-1,0,0,0" Name="label11" VerticalAlignment="Top" />
+                    <TextBox Height="23" Name="txtCollectionID" Width="120" Grid.ColumnSpan="2" Margin="78,2,122,56" />
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </local:ProviderConfigurationBase>
