--- a/Pulse/Pulse/Options.xaml
+++ b/Pulse/Pulse/Options.xaml
@@ -2,19 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Properties="clr-namespace:Pulse.Properties"
-        Title="{x:Static Properties:Resources.OptionsWindowTitle}" Height="480" Width="520" WindowStartupLocation="CenterScreen" Background="Transparent" MinWidth="400" MinHeight="350"
+        DataContext="{Binding RelativeSource={RelativeSource Self}}"
+        Title="{x:Static Properties:Resources.OptionsWindowTitle}" Height="480" Width="520" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="350"
         SourceInitialized="WindowSourceInitialized">
     <DockPanel Background="{StaticResource TabControlBgBrush}" Margin="0,34,0,0">
         <Grid DockPanel.Dock="Bottom">
-            <Rectangle Fill="#c1c2c3" VerticalAlignment="Top" Height="1" Margin="0,0,0,0"/>
-            <Rectangle VerticalAlignment="Top" Height="4" Margin="0,1,0,0">
-                <Rectangle.Fill>
-                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                        <GradientStop Color="#AAc6c9cd" Offset="0"/>
-                        <GradientStop Color="#e3e7ec" Offset="1"/>
-                    </LinearGradientBrush>
-                </Rectangle.Fill>
-            </Rectangle>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,10">
                 <Button Name="OkButton" Content="{x:Static Properties:Resources.OptionsOkButton}" MinWidth="75" Height="23" Margin="0,0,7,0" Click="OkButtonClick"/>
                 <Button Name="CancelButton" Content="{x:Static Properties:Resources.OptionsCancelButton}" MinWidth="75" Height="23" Margin="0,0,7,0" Click="CancelButtonClick"/>
@@ -33,19 +25,12 @@
                             <ComboBox Name="ProvidersBox" MinWidth="120" Margin="7,3,0,3" SelectionChanged="ProviderSelectionChanged" Width="156" />
                             <Button Content="{x:Static Properties:Resources.ProviderSettings}" Height="23" Name="ProviderSettings" Width="75" IsEnabled="False" Margin="7,0,0,0" Click="ProviderSettings_Click" />
                         </StackPanel>
-
-                        <StackPanel Name="FilterPanel">
-                            <TextBlock FontSize="24" FontWeight="Light" Text="{x:Static Properties:Resources.OptionsFilter}" Margin="0,15,0,0" Foreground="#083ca2"/>
-                            <Separator Margin="0,0,0,10" Visibility="Visible"/>
-                            <TextBlock Text="{x:Static Properties:Resources.OptionsFilterText}" TextWrapping="Wrap"/>
-                            <TextBox Name="FilterBox" Text="{x:Static Properties:Resources.OptionsSearchBox}" 
-                                     IsKeyboardFocusedChanged="SearchBoxIsKeyboardFocusedChanged" TextChanged="SearchBoxTextChanged"/>
-
-                        </StackPanel>
                         <TextBlock FontSize="24" FontWeight="Light" Text="{x:Static Properties:Resources.OptionsBehaviour}" Margin="0,15,0,0" Foreground="#083ca2"/>
                         <Separator Margin="0,0,0,10"/>
 
                         <CheckBox Name="AutoDownloadCheckBox" Content="{x:Static Properties:Resources.OptionsDownloadAutomatically}" Click="CheckBoxClick"/>
+                        <CheckBox Name="DownloadOnStartCheckBox" Content="{x:Static Properties:Resources.OptionsDownloadOnStart}" Click="CheckBoxClick"/>
+
                         <StackPanel Orientation="Horizontal" Margin="0,7,0,0" >
                             <TextBlock Text="{x:Static Properties:Resources.OptionsRefreshInterval}"/>
                             <TextBlock Name="RefreshIntervalValueTextBlock" Text="20 min." Margin="5,0,3,0" FontWeight="DemiBold"/>
@@ -57,7 +42,6 @@
                                         IsSnapToTickEnabled="True" IsDirectionReversed="True" ValueChanged="RefreshIntervalSliderValueChanged" IsEnabled="{Binding ElementName=AutoDownloadCheckBox, Path=IsChecked}"/>
                         </DockPanel>
                         <CheckBox Name="PreFetchCheckBox" Content="{x:Static Properties:Resources.OptionsPreFetch}" Click="CheckBoxClick"/>
-                        <CheckBox Name="ChangeLogonBgCheckBox" Content="{x:Static Properties:Resources.OptionsChangeLogonBg}" Click="CheckBoxClick"/>
                         <TextBlock FontSize="24" FontWeight="Light" Text="{x:Static Properties:Resources.OptionsCache}" Margin="0,15,0,0" Foreground="#083ca2"/>
                         <Separator Margin="0,0,0,10"/>
                         <CheckBox Name="ClearCacheCheckBox" Content="{x:Static Properties:Resources.OptionsClearCache}" Click="CheckBoxClick"/>
@@ -76,6 +60,50 @@
                     </StackPanel>
                 </ScrollViewer>
             </TabItem>
+            <TabItem Header="Outputs" Style="{StaticResource TabItemStyle}">
+                <ScrollViewer VerticalScrollBarVisibility="Auto" Background="White">
+                    <StackPanel Orientation="Vertical" Margin="10">
+                        <TextBlock FontSize="24" FontWeight="Light" Foreground="#083ca2" Text="{x:Static Properties:Resources.OptionsOutputs}" />
+                        <Separator />
+
+                        <ListView ItemsSource="{Binding OutputProviderInfos}">
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="Active">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <CheckBox IsChecked="{Binding Active}" Checked="OutputProvidersCheckBox_Click" Unchecked="OutputProvidersCheckBox_Click" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding ProviderName}"/>
+                                    <GridViewColumn Header="Order">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBox Text="{Binding Order}" Width="20" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="Allow Async">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <CheckBox IsChecked="{Binding AsyncOK}" Checked="OutputProvidersCheckBox_Click" Unchecked="OutputProvidersCheckBox_Click" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="Settings">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Button IsEnabled="{Binding IsConfigurable}" Content="Configure" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                    </StackPanel>
+                </ScrollViewer>
+            </TabItem>
             <TabItem Header="{x:Static Properties:Resources.OptionsAboutTabHeader}" Style="{StaticResource TabItemStyle}">
                 <ScrollViewer VerticalScrollBarVisibility="Auto" Background="White">
                     <StackPanel Orientation="Vertical" Margin="10">
@@ -84,12 +112,12 @@
                             <StackPanel Orientation="Vertical">
                                 <TextBlock FontSize="24" FontWeight="Light" Text="{x:Static Properties:Resources.OptionsAbout}" Foreground="#083ca2"/>
                                 <Separator/>
-                                <TextBlock Text="Pulse Beta 2" Margin="0,7,0,0"/>
+                                <TextBlock Text="Pulse Beta 4" Margin="0,7,0,0"/>
                                 <TextBlock>
                                     <Run Text="{x:Static Properties:Resources.OptionsVersion}"/> 
                                     <Run Name="BuildTag" Text="1.0.0.0"/>
                                 </TextBlock>
-                                <TextBlock Text="Copyright © Stealth 2011"/>
+                                <TextBlock Text="Copyright © Stealth 2011, Patricker 2012"/>
                                 <TextBlock Text="{x:Static Properties:Resources.OptionsCopyright}" TextWrapping="Wrap"/>
                             </StackPanel>
                         </Grid>
