--- a/Pulse/Pulse/App.xaml
+++ b/Pulse/Pulse/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Pulse.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml" Startup="ApplicationStartup" DispatcherUnhandledException="ApplicationDispatcherUnhandledException">
+             StartupUri="MainWindow.xaml" Startup="ApplicationStartup">
     <Application.Resources>
         <!-- TabControl -->
         <Style x:Key="TabItemFocusVisual">
